@@ -1,4 +1,5 @@
 0.2:
+- Capital letter bug in new input code fixed, from slayne
 - Oscilloscope now reacts to music when speech is disabled (OpenAL) -Mika
 - Rewritten input code (better and adds joystick/pad support), from slayne
 - Biadapt scaling for pure mode, from fOSSiL
